<resources>
    <string name="app_name">Covid Tracker</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>
    <string name="todo">to do\\</string>
    <string name="history">Search History</string>
    <string name="search">Search Countries..</string>
    <string name="details">Wiki Page</string>
    <string name="covid_tracker">Covid Tracker</string>
    <string name="this_is_a_very_long_description_about_a_nothing_and_awful_info_of_a_searched_item">No description found.</string>
    <string name="country">India</string>
    <string name="title">Title</string>
    <string name="no_result_found">No result found.</string>
    <string name="search_history_will_appear_here">Search history will appear here.</string>
    <string name="confirmed_cases_20">Confirmed cases = 20</string>
    <string name="province_assam">Province: Assam</string>
    <string name="confirmed_cases_12134">Confirmed cases: 12134</string>
</resources>