<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#151515"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/covid_tracker"
            android:textColor="@color/white">

        </TextView>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/button_bottom_sheet_background"
        android:padding="2dp"
        android:elevation="5dp">

        <EditText
            android:id="@+id/searchBar"
            style="@style/MaterialSearchBarLight"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@drawable/button_bottom_sheet_background"
            android:backgroundTint="@color/white"
            android:hint="@string/search"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="20dp"
            android:paddingTop="2dp"
            android:paddingEnd="20dp"
            android:paddingBottom="2dp"
            android:textColor="@color/black"
            android:textColorHint="#757373"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/et_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="18dp"
            android:paddingBottom="12dp"
            android:src="@drawable/ic_baseline_search_24" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relative"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                tools:listitem="@layout/search_item_view"
                />

            <FrameLayout
                android:id="@+id/no_search_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animationView"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:padding="10dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/login_page_animation" />

                <TextView
                    android:id="@+id/tv_no_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/no_result_found"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/tv_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="#fff"
            android:textSize="13sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="26"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:foregroundGravity="center"
                android:layout_gravity="center"
                tools:listitem="@layout/saved_item" />

            <FrameLayout
                android:id="@+id/no_history_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="24dp"
                    android:contentDescription="@string/todo"
                    android:padding="10dp"
                    android:src="@drawable/ic_un_draw_history"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/search_history_will_appear_here"
                    android:textColor="#837E7E"
                    android:textSize="12sp" />
            </FrameLayout>

        </LinearLayout>


    </LinearLayout>
</RelativeLayout>